# portfolio-projects

./: LICENSE  README.md  demo.ipynb  pyproject.toml
Case Study - 2017 National Household Travel Survey (NHTS)/: 2017 NHTS.qmd
Case Study - Exploring Socioeconomic Factors Behind Infrequent Voting/: case_study_3_final.qmd
ReciPy/: requirements.txt
ReciPy/src/: ingredient_detector.py  kitchen_scale.py
ReciPy/tests/: test_ingredient_detector.py  test_kitchen_scale.py
Well On Their Way - Asphyxia Analysis Project/: Asphyxia Analysis Code.qmd  Asphyxia Interactive Dashboard.html  Asphyxia.csv  PPH.csv  Referrals.csv
