[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "ReciPy_nicolehychoi_ryajasmindonelo"
version = "0.0.1"
authors = [
 { name="Nicole Choi", email="nchoi@smith.edu" },
 { name="Rya Donelo", email="rdonelo.edu" }, 
]
description = "ReciPy, a Python package that home cooks and bakers can use to simulate kitchen appliances, generate ingredient information, and find new recipes."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
 "Programming Language :: Python :: 3",
 "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
